<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/popupLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="Ma réunion"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:hint="Lieu"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextSujet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="Sujet"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextParticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLines="3"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="Participant"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:ems="10"
        android:hint="Date"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:ems="10"
        android:hint="Heure"
        android:inputType="text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7.5dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:text="+"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</LinearLayout>
</ScrollView>