...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_list_meeting"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layoutManager="LinearLayoutManager"

            />
      </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_list_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_add_black_24dp"
        android:layout_margin ="16dp"
...
