...
         />

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@id/item_list_meeting_delete"
    app:layout_constraintBottom_toBottomOf ="@+id/circle_item"
    app:layout_constraintStart_toEndOf="@+id/circle_item"
    app:layout_constraintTop_toTopOf="@+id/circle_item"
    android:orientation="vertical"
    >
    <TextView
...
