<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterRoomLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="Salle à Filtrer"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFiltreRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:focusable="false"
        android:clickable="false"
        android:focusableInTouchMode="true"
        android:ems="10"
        android:hint="Lieu"
        android:inputType="text"
        android:textSize="16sp" />



    <EditText
        android:id="@+id/editTextFiltreDate"
        android:focusable="false"
        android:clickable="false"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="Date"
        android:inputType="text"
        android:textSize="16sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/buttonFiltrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:clickable="true"
            android:background="@color/colorPrimaryDark"
            android:text="Filtrer"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />



    </LinearLayout>

</LinearLayout>