<resources>
    <string name="app_name">Mareu</string>
    <string name="default_text">default_text</string>
    <string name="FillPlace">\"Merci de remplir le lieu \"</string>
    <string name="FillSubject">Merci de remplir un sujet</string>
    <string name="FillDate">Merci de rentrer une date</string>
    <string name="FillHour">Merci de rentrer une heure</string>
    <string name="Error">Les champs ne sont pas remplis</string>
    <string name="FillPart">Merci d\'entrer un participant</string>
    <string name="icon">Icon</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">reset</string>
    <string name="filtre_lieu_et_date">filter</string>
    <string name="item_heure">item_heure</string>



</resources>
